--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Using data from Darksky and Weatherstack</p>
         <img class="portrait"  src="/img/100.jpg">
     </div>
  
