--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,6 +20,6 @@
     </div>
     
     {{>footer}}
-    <script src="/js/app.js"></script>
+    <script src="/JS/app.js"></script>
 </body>
 </html>
